# saas-shield-demo-notes-app

./: .gitignore  .s3.env  LICENSE  README.md  flake.nix  package-lock.json  package.json
client/: .gitignore  Cargo.toml  README.md  flake.nix  index.html  rust-toolchain.toml  tailwind.config.js  tailwind.css
client/src/: main.rs
client/src/apis/: mod.rs  types.rs
client/src/components/: add_note.rs  chatbot.rs  mod.rs  note.rs  note_categories.rs  note_list.rs  org_avatar.rs  search_notes.rs  sidebar.rs
client/src/components/atoms/: add_icon.rs  attachment_icon.rs  download_icon.rs  icon.rs  mod.rs  note_icon.rs  notebook_icon.rs  office_icon.rs  search_icon.rs
client/src/pages/: index.rs
infra/: README.md  cb-accts.txt.iron  docker-compose.yml  flake.nix
infra/cs/: cloaked-search-conf.json
infra/cs/indices/: demo.json
infra/indices/: demo.json
infra/ollama/: Modelfile
infra/s3/: application.conf  logback.xml  s3-user-creds-example.txt  s3-user-creds.txt.iron  tenant_mapping.conf
infra/tsp/: service-account-example.conf  service-account.conf.iron  tsp-api-key-example  tsp-api-key.env.iron  tsp-api-key.iron
rust/: Cargo.toml
rust/migrations/: 1727214681_create copy.sql  1727214681_create.sql  1727214682_initial_data.sql
rust/src/: db.rs  main.rs  notes.rs
server/: Cargo.toml  README.md  flake.nix  notes_data_demo_1  notes_data_demo_2  populate_notes.sh  rust-toolchain.toml  server-example.conf  server.conf.iron
server/migrations/: 1727214681_create.sql  1727214682_initial_data.sql
server/src/: attachments.rs  categories.rs  db.rs  embeddings.rs  login.rs  main.rs  notes.rs  search_service.rs
