[package]
name = "saas-shield-demo-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
gloo-utils = "0.2.0"
lazy_static = "1.5.0"
reqwasm = { version = "0.5.0", default-features = false, features = ["json", "http"]}
rfd = "0.15.0"
serde = { version = "1.0.210", features = [ "derive" ] }
serde_json = "1.0.128"
sycamore = { version = "0.9.0-beta.4", features = [ "suspense" ] }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = [ "HtmlDocument" ] }
